<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data class="device.DeviceFragmentDB" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/deviceAllTV"
            android:layout_width="match_parent"
            android:layout_height="@dimen/center_height"
            android:layout_margin="@dimen/layout_margin"
            android:background="@drawable/bg_radius_main"
            android:drawableRight="@mipmap/arrow_r"
            android:gravity="center|left"
            android:paddingLeft="@dimen/text_padding"
            android:paddingRight="@dimen/text_padding"
            android:text="@string/all_device" />

        <!--分组 ，点击按钮选择添加-->
        <TextView
            android:id="@+id/deviceGroupTV"
            android:layout_width="match_parent"
            android:layout_height="@dimen/center_height"
            android:drawableRight="@mipmap/arrow_r"
            android:gravity="center|left"
            android:paddingLeft="@dimen/padding"
            android:paddingRight="@dimen/text_padding"
            android:text="@string/group"
            android:textSize="@dimen/text_size" />
        <!--//分组 数据列表-->
        <ListView
            android:id="@+id/devicelist"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
        <!--未分组设备-->
        <TextView
            android:id="@+id/deviceUngroupedTV"
            android:layout_width="match_parent"
            android:layout_height="@dimen/center_height"
            android:drawableRight="@mipmap/arrow_r"
            android:gravity="center|left"
            android:paddingLeft="@dimen/padding"
            android:paddingRight="@dimen/text_padding"
            android:text="@string/ungrouped"
            android:textSize="@dimen/text_size" />
        <!--//未分组 数据列表-->
        <ListView
            android:id="@+id/devicelist2"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</layout>